rust/yew-app/target/wasm32-unknown-unknown/debug/build/anyhow-1cb2c8f82ddec10d/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/thebigapple/austinjalexander/monorepo-template/rust/yew-app/target/wasm32-unknown-unknown/debug/build/anyhow-1cb2c8f82ddec10d/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
